--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.1.0",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
