--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "jwt-decode": "^4.0.0",
+    "peerjs": "^1.5.4",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.0",
     "tslib": "^2.3.0",
