--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "node build/index.js",
     "build": "pnpm exec tsc",
-    "dev": "nodemon src/index.ts ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.ts --ignore test/",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -23,14 +23,24 @@
     "socket.io": "^4.8.0"
   },
   "devDependencies": {
+    "@types/chai": "^5.0.0",
+    "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mocha": "^10.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.6.1",
+    "axios": "^1.7.7",
+    "chai": "^5.1.1",
+    "chai-http": "^5.1.1",
+    "jest": "^29.7.0",
+    "mocha": "^10.7.3",
     "nodemon": "^3.1.7",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   }
 }
